mockers_derive/tests/compile-fail/unresolved_parent_ref.rs
use mockers_derive::mocked;

trait A {}

#[mocked(refs = "A => ::A")]
trait B : A {}

fn main() {}
